# python-django-airbnb-backend

./: .gitignore  pyproject.toml
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py  0002_booking_experience_data.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_participants_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detail_and_more.py  0003_alter_experience_category_alter_experience_host.py  0004_alter_experience_description.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pet_allowed.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_file_and_more.py  0003_alter_photo_room.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  (+1 more)
rooms/: admin.py  models.py  serializer.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+11 files in other folders)
