[tool.poetry]
name = "python-django-airbnb-backend"
version = "0.1.0"
description = ""
authors = ["TaeHoon <31303655+xoasml@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
black = "^24.4.2"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
